shows details of country and weather conditions

--- a/app.json
+++ b/app.json
@@ -16,14 +16,15 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.users.users",
+      "buildNumber": "1.0.0"
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
+      "package": "com.users.users",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
